# monitor-switch

./: Cargo.toml  README.md  config.example.toml  rustfmt.toml
src/: config.rs  main.rs  state.rs
