[package]
name = "monitor-switch"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.0"
description = "swich monitor & sound output profiles"
repository = "https://github.com/jsen-/monitor-switch"
license = "Apache-2.0 OR MIT"

[profile.release]
lto = "fat"
strip = true
panic = "abort"
opt-level = "s"

[dependencies]
thiserror = "1.0.26"
serde = "1.0.127"
toml = "0.5.8"
indexmap = { version="1.7.0", features=["serde"] }
zbus = "2.0.1"
pulsectl-rs = "0.3.2"
